; ModuleID = '/home/carl/AnghaBench/linux/drivers/pcmcia/extr_at91_cf.c_at91_cf_irq.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pcmcia/extr_at91_cf.c_at91_cf_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.at91_cf_socket = type { i32, i32, %struct.TYPE_4__*, %struct.TYPE_3__* }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [9 x i8] c"card %s\0A\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"present\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"gone\00", align 1
@SS_DETECT = common dso_local global i32 0, align 4
@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @at91_cf_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @at91_cf_irq(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.at91_cf_socket*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = bitcast i8* %7 to %struct.at91_cf_socket*
  store %struct.at91_cf_socket* %8, %struct.at91_cf_socket** %5, align 8
  %9 = load i32, i32* %3, align 4
  %10 = load %struct.at91_cf_socket*, %struct.at91_cf_socket** %5, align 8
  %11 = getelementptr inbounds %struct.at91_cf_socket, %struct.at91_cf_socket* %10, i32 0, i32 3
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @gpio_to_irq(i32 %14)
  %16 = icmp eq i32 %9, %15
  br i1 %16, label %17, label %43

17:                                               ; preds = %2
  %18 = load %struct.at91_cf_socket*, %struct.at91_cf_socket** %5, align 8
  %19 = call i32 @at91_cf_present(%struct.at91_cf_socket* %18)
  store i32 %19, i32* %6, align 4
  %20 = load i32, i32* %6, align 4
  %21 = load %struct.at91_cf_socket*, %struct.at91_cf_socket** %5, align 8
  %22 = getelementptr inbounds %struct.at91_cf_socket, %struct.at91_cf_socket* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = icmp ne i32 %20, %23
  br i1 %24, label %25, label %42

25:                                               ; preds = %17
  %26 = load i32, i32* %6, align 4
  %27 = load %struct.at91_cf_socket*, %struct.at91_cf_socket** %5, align 8
  %28 = getelementptr inbounds %struct.at91_cf_socket, %struct.at91_cf_socket* %27, i32 0, i32 0
  store i32 %26, i32* %28, align 8
  %29 = load %struct.at91_cf_socket*, %struct.at91_cf_socket** %5, align 8
  %30 = getelementptr inbounds %struct.at91_cf_socket, %struct.at91_cf_socket* %29, i32 0, i32 2
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 0
  %33 = load i32, i32* %6, align 4
  %34 = icmp ne i32 %33, 0
  %35 = zext i1 %34 to i64
  %36 = select i1 %34, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0)
  %37 = call i32 @dev_dbg(i32* %32, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8* %36)
  %38 = load %struct.at91_cf_socket*, %struct.at91_cf_socket** %5, align 8
  %39 = getelementptr inbounds %struct.at91_cf_socket, %struct.at91_cf_socket* %38, i32 0, i32 1
  %40 = load i32, i32* @SS_DETECT, align 4
  %41 = call i32 @pcmcia_parse_events(i32* %39, i32 %40)
  br label %42

42:                                               ; preds = %25, %17
  br label %43

43:                                               ; preds = %42, %2
  %44 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %44
}

declare dso_local i32 @gpio_to_irq(i32) #1

declare dso_local i32 @at91_cf_present(%struct.at91_cf_socket*) #1

declare dso_local i32 @dev_dbg(i32*, i8*, i8*) #1

declare dso_local i32 @pcmcia_parse_events(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
